Blender crash on pose library N-panel #108078

Closed
opened 2023-05-19 14:22:07 +02:00 by Hamed-Nasrollahi-Majid · 9 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 850M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.68

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3
Worked: (newest version of Blender that worked as expected)

Short description of error
Every time I click on invert button (which invert filtering) inside pose library N-panel blender crashes under this condition that your active asset library set to all.

Exact steps for others to reproduce the error

  1. First be sure animation pose library add-on is enable.
  2. Create new scene.
  3. Create an armature.
  4. Go to pose mode.
  5. Click on Animation tab on side bar(N-panel).
  6. Change active pose library from "Current File" to "All".
  7. Click on double arrow icon which indicate invert filtering one or two times.
  8. Blender will crash.

I also tested on blender 3.6 Beta , It still exist but in v 3.6 beta you should click on view port shading options after step 6 to perform crash.

Anyway I upload crash log.
Thanks a lot.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 850M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.68 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: `e1ccd9d4a1d3` Worked: (newest version of Blender that worked as expected) **Short description of error** Every time I click on invert button (which invert filtering) inside pose library N-panel blender crashes under this condition that your active asset library set to all. **Exact steps for others to reproduce the error** 1. First be sure animation pose library add-on is enable. 2. Create new scene. 3. Create an armature. 4. Go to pose mode. 5. Click on Animation tab on side bar(N-panel). 6. Change active pose library from "Current File" to "All". 7. Click on double arrow icon which indicate invert filtering one or two times. 8. Blender will crash. I also tested on blender 3.6 Beta , It still exist but in v 3.6 beta you should click on view port shading options after step 6 to perform crash. Anyway I upload crash log. Thanks a lot.
Hamed-Nasrollahi-Majid added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-19 14:22:08 +02:00
Member

Thanks for the report. I can confirm the crash.
Memoryblock ui_template_list_collect_display_items: end corrupt
It's add-on report though, should go to: https://projects.blender.org/blender/blender-addons/issues

Thanks for the report. I can confirm the crash. `Memoryblock ui_template_list_collect_display_items: end corrupt` It's add-on report though, should go to: https://projects.blender.org/blender/blender-addons/issues
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-22 17:52:24 +02:00
Member

debugbreak due to Head corruption in debug build
@dr.sybren hi, can you check?

debugbreak due to Head corruption in debug build @dr.sybren hi, can you check?
Sybren A. Stüvel self-assigned this 2023-06-12 14:12:57 +02:00
Sybren A. Stüvel removed their assignment 2023-06-12 14:35:30 +02:00
Sybren A. Stüvel self-assigned this 2023-06-12 14:40:30 +02:00
Julian Eisel was assigned by Sybren A. Stüvel 2023-06-12 14:50:50 +02:00
Philipp Oeser added the
Module
User Interface
Interest
Animation & Rigging
labels 2023-07-06 09:59:49 +02:00
Member

Will raise priority here (since it is a crasher that is not totally unlikely to run into)

Will raise priority here (since it is a crasher that is not totally unlikely to run into)
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2024-02-16 09:51:47 +01:00

@JulianEisel according to the activity log on this issue you had a fix, but only accidentally committed it and then reverted it again. Do you still have that fix?

@JulianEisel according to the activity log on this issue you had a fix, but only accidentally committed it and then reverted it again. Do you still have that fix?
Member

Unsure of the process, but should this have a branch tag or something?

AFAICT this issue does not occur in:

  • 3.3.15 LTS
  • 4.1 Bcon3
  • 4.2 main

So the only release this report applies to is 3.6.8 LTS? Or am I missing something about this report? Mostly wondering how to prioritize this within our release schedule when set to High Priority but for an older version.

Have confirmed that Julian's fix in 160678d224 does stop this crash in 3.6.8 LTS, but unsure if this is a correct fix since he reverted it earlier.

Unsure of the process, but should this have a branch tag or something? AFAICT this issue does not occur in: * 3.3.15 LTS * 4.1 Bcon3 * 4.2 main So the only release this report applies to is 3.6.8 LTS? Or am I missing something about this report? Mostly wondering how to prioritize this within our release schedule when set to High Priority but for an older version. Have confirmed that Julian's fix in https://projects.blender.org/blender/blender/commit/160678d224456f6884a8159b440896c0fc8ed346 does stop this crash in 3.6.8 LTS, but unsure if this is a correct fix since he reverted it earlier.
Member

Hi, yes, this is indeed 3.6 specific, I'll add that. AFAICS 160678d224 was never committed to main branch (commit is on blender-projects-basics branch)
There is WIP PR btw: #109157

Hi, yes, this is indeed 3.6 specific, I'll add that. AFAICS 160678d224456f6884a8159b440896c0fc8ed346 was never committed to main branch (commit is on `blender-projects-basics` branch) There is WIP PR btw: https://projects.blender.org/blender/blender/pulls/109157
Pratik Borhade added this to the 3.6 LTS milestone 2024-02-20 11:25:49 +01:00
Member

@PratikPB2123 - There is WIP PR btw: #109157

Yes, those were the same changes that I tested in 3.6 and confirmed that it does fix this issue. But no idea if it caused any bad side effects.

> @PratikPB2123 - There is WIP PR btw: https://projects.blender.org/blender/blender/pulls/109157 Yes, those were the same changes that I tested in 3.6 and confirmed that it does fix this issue. But no idea if it caused any bad side effects.
Member

I’d be surprised if the error doesn’t appear in recent builds.

As noted in the PR:

NOTE: This uses uiListDyn.items_filter_flags to store the new flag,
which apparently is exposed in the Python API. This is a showstopper
for this patch, still creating it for discussion.

I don’t remember details but IIRC addressing this seemed quite involved. Would have to check again.

I’d be surprised if the error doesn’t appear in recent builds. As noted in the PR: > NOTE: This uses uiListDyn.items_filter_flags to store the new flag, > which apparently is exposed in the Python API. This is a showstopper > for this patch, still creating it for discussion. I don’t remember details but IIRC addressing this seemed quite involved. Would have to check again.
Member

Checked this again, the error is still present in main, the difference is just that the asset shelf doesn't use the asset-view template anymore. But any custom asset-view template (UILayout.template_asset_view()) use still crashes.

I've updated blender/blender!109157 now so it can be reviewed an merged. Plus, I created blender/blender!119379 to do a testbuild with the fix on top of the 3.6 LTS branch, in my testing it fixes the crash just fine.

Checked this again, the error is still present in `main`, the difference is just that the asset shelf doesn't use the asset-view template anymore. But any custom asset-view template (`UILayout.template_asset_view()`) use still crashes. I've updated blender/blender!109157 now so it can be reviewed an merged. Plus, I created blender/blender!119379 to do a testbuild with the fix on top of the 3.6 LTS branch, in my testing it fixes the crash just fine.
Sybren A. Stüvel removed their assignment 2024-03-21 09:35:33 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-22 12:28:57 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108078
No description provided.