source/blender/makesrna/intern/rna_ui.c
@@ -615,7 +615,9 @@ static void uilist_filter_items(uiList *ui_list,
         int t_idx, t_ni, prev_ni;
         flt_data->items_shown = 0;
         for (i = 0, shown_idx = 0; i < len; i++) {
-          if ((filter_flags[i] & UILST_FLT_ITEM) ^ filter_exclude) {
+          if (((filter_flags[i] & UILST_FLT_ITEM_NEVER_SHOW) == 0) &&
+              (filter_flags[i] & UILST_FLT_ITEM) ^ filter_exclude)
+          {
             filter_neworder[shown_idx++] = filter_neworder[i];
           }
         }
@@ -642,7 +644,9 @@ static void uilist_filter_items(uiList *ui_list,
         /* we still have to set flt_data->items_shown... */
         flt_data->items_shown = 0;
         for (i = 0; i < len; i++) {
-          if ((filter_flags[i] & UILST_FLT_ITEM) ^ filter_exclude) {
+          if (((filter_flags[i] & UILST_FLT_ITEM_NEVER_SHOW) == 0) &&
+              (filter_flags[i] & UILST_FLT_ITEM) ^ filter_exclude)
+          {
             flt_data->items_shown++;
           }
         }
