doc/python_api/examples/bpy.types.UIList.2.py
@@ -136,8 +136,9 @@ class MESH_UL_vgroups_slow(bpy.types.UIList):
     def filter_items(self, context, data, propname):
         # This function gets the collection property (as the usual tuple (data, propname)), and must return two lists:
         # * The first one is for filtering, it must contain 32bit integers were self.bitflag_filter_item marks the
-        #   matching item as filtered (i.e. to be shown), and 31 other bits are free for custom needs. Here we use the
-        #   first one to mark VGROUP_EMPTY.
+        #   matching item as filtered (i.e. to be shown). The upper 16 bits (including self.bitflag_filter_item) are
+        #   reserved for internal use, the lower 16 bits are free for custom use. Here we use the first bit to mark
+        #   VGROUP_EMPTY.
         # * The second one is for reordering, it must return a list containing the new indices of the items (which
         #   gives us a mapping org_idx -> new_idx).
         # Please note that the default UI_UL_list defines helper functions for common tasks (see its doc for more info).
